[package]
name = "google-oauth"
version = "1.4.0"
edition = "2021"
description = "Google oauth server-side client"
license = "MIT"
repository = "https://github.com/caojen/google-oauth"
resolver = "1"
keywords = [
    "google",
    "oauth2"
]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
anyhow = { version = "1" }
reqwest = { version = "0.11", features = ["blocking"] }
lazy_static = { version = "1" }
jwt = { version = "0.16.0" }
base64 = { version = "0.21" }
sha256 = { version = "1" }
rsa = { version = "0.8.2", features = ["sha2"] }
hex = { version = "0.4" }
log = { version = "0.4" }
async-rwlock = { version = "1" }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
env_logger = "0.10.0"
