[package]
name = "google-oauth"
version = "1.10.1"
edition = "2021"
description = "Google oauth server-side client"
license = "MIT"
repository = "https://github.com/caojen/google-oauth"
resolver = "1"
keywords = [
    "google",
    "oauth2"
]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
anyhow = { version = "1" }
reqwest = { version = "0.12", default-features=false }
lazy_static = { version = "1" }
base64 = { version = "0.22" }
sha256 = { version = "1", default-features = false }
rsa = { version = "0.9.6", features = ["sha2"] }
hex = { version = "0.4" }
log = { version = "0.4" }
async-rwlock = { version = "1" }
getrandom = { version = "0.2.10", features = ["js"] }
wasm-bindgen = { version = "0.2.87", optional = true }
wasm-bindgen-futures = { version = "0.4.37", optional = true }
web-time = { version = "0.2.3", optional = true }

[features]
default = ["reqwest/default-tls"]
blocking = ["reqwest/blocking"]
wasm = ["dep:wasm-bindgen-futures", "dep:wasm-bindgen", "dep:web-time"]
reqwest-rustls = ["reqwest/rustls-tls"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11"

[lib]
crate-type = ["cdylib", "rlib"]
